	PR gcov-profile/51449 	* coverage.c (coverage_end_function): Always process the coverage 	variables.

testsuite/
	* g++.dg/gcov/gcov-14.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182184 138bc75d-0d04-0410-961f-82ee72b054a4